# sdizo3

./: CMakeLists.txt  dane.txt  main.cpp
helpingTools/: HelpingTools.cpp  HelpingTools.h  MyMenu.cpp  MyMenu.h
myArray/: MyArray.cpp  MyArray.h
myHeap/: MyHeap.cpp  MyHeap.h
myList/: ListNode.cpp  ListNode.h  MyList.cpp  MyList.h
myTree/: MyTree.cpp  MyTree.h  TreeNode.cpp  TreeNode.h
